renamed date to datetime, fixed bugs in datetime
- renamed date to datetime
- prevented constructing datetime objects
- removed ToString() in datetime

--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -180,7 +180,7 @@
     <ClInclude Include="src\FlexEngine\flexformatter.h">
       <Filter>src\FlexEngine</Filter>
     </ClInclude>
-    <ClInclude Include="src\FlexEngine\date.h">
+    <ClInclude Include="src\FlexEngine\datetime.h">
       <Filter>src\FlexEngine</Filter>
     </ClInclude>
   </ItemGroup>
