--- a/FlexEditor/imgui.ini
+++ b/FlexEditor/imgui.ini
@@ -190,6 +190,12 @@ Size=312,691
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Splash Screen]
+ViewportPos=517,290
+ViewportId=0x972A4F5F
+Size=930,400
+Collapsed=0
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
@@ -325,7 +331,7 @@ Column 1  Weight=1.1549
 DockSpace       ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
   DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=34,86 Size=1280,691 Split=X
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,209 Size=1280,691 Split=X
   DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=968,691 Split=X
     DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=312,691 Selected=0xBF096F38
     DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=654,691 Split=Y
