--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -20,17 +20,17 @@
     <Filter Include="src\FlexEngine\Loader">
       <UniqueIdentifier>{af4987ea-e5b4-45ee-bde7-d86af28bbe18}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\FlexEngine\Component">
-      <UniqueIdentifier>{056a8a36-4ac8-4d06-acb5-bd1ac0bc8b49}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\FlexEngine\Reflection">
       <UniqueIdentifier>{e9041521-9d51-46c9-8a4b-f92edb080361}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\FlexEngine\Math">
-      <UniqueIdentifier>{074c64d3-93c6-4963-a353-8f4f11343c1e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\FlexEngine\StateManager">
       <UniqueIdentifier>{fe3d65a9-3fdd-4ca6-9717-b72a808fbf2a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\FlexEngine\ECS">
+      <UniqueIdentifier>{056a8a36-4ac8-4d06-acb5-bd1ac0bc8b49}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\FlexEngine\FlexMath">
+      <UniqueIdentifier>{074c64d3-93c6-4963-a353-8f4f11343c1e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -73,17 +73,8 @@
     <ClCompile Include="src\FlexEngine\uuid.cpp">
       <Filter>src\FlexEngine</Filter>
     </ClCompile>
-    <ClCompile Include="src\FlexEngine\Core\gameobject.cpp">
-      <Filter>src\FlexEngine\Core</Filter>
-    </ClCompile>
-    <ClCompile Include="src\FlexEngine\Core\scene.cpp">
-      <Filter>src\FlexEngine\Core</Filter>
-    </ClCompile>
     <ClCompile Include="src\FlexEngine\Reflection\primitives.cpp">
       <Filter>src\FlexEngine\Reflection</Filter>
-    </ClCompile>
-    <ClCompile Include="src\FlexEngine\Component\transform.cpp">
-      <Filter>src\FlexEngine\Component</Filter>
     </ClCompile>
     <ClCompile Include="src\FlexEngine\flexformatter.cpp">
       <Filter>src\FlexEngine</Filter>
@@ -100,14 +91,17 @@
     <ClCompile Include="src\FlexEngine\Core\layerstack.cpp">
       <Filter>src\FlexEngine\Core</Filter>
     </ClCompile>
-    <ClCompile Include="src\FlexEngine\Math\vector2.cpp">
-      <Filter>src\FlexEngine\Math</Filter>
+    <ClCompile Include="src\FlexEngine\ECS\registry.cpp">
+      <Filter>src\FlexEngine\ECS</Filter>
     </ClCompile>
-    <ClCompile Include="src\FlexEngine\Math\vector3.cpp">
-      <Filter>src\FlexEngine\Math</Filter>
+    <ClCompile Include="src\FlexEngine\FlexMath\vector2.cpp">
+      <Filter>src\FlexEngine\FlexMath</Filter>
     </ClCompile>
-    <ClCompile Include="src\FlexEngine\Math\vector4.cpp">
-      <Filter>src\FlexEngine\Math</Filter>
+    <ClCompile Include="src\FlexEngine\FlexMath\vector3.cpp">
+      <Filter>src\FlexEngine\FlexMath</Filter>
+    </ClCompile>
+    <ClCompile Include="src\FlexEngine\FlexMath\vector4.cpp">
+      <Filter>src\FlexEngine\FlexMath</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -162,22 +156,10 @@
     <ClInclude Include="src\FlexEngine\Loader\fmodstudio.h">
       <Filter>src\FlexEngine\Loader</Filter>
     </ClInclude>
-    <ClInclude Include="src\FlexEngine\Component\base.h">
-      <Filter>src\FlexEngine\Component</Filter>
-    </ClInclude>
-    <ClInclude Include="src\FlexEngine\Component\transform.h">
-      <Filter>src\FlexEngine\Component</Filter>
-    </ClInclude>
     <ClInclude Include="src\FlexEngine\uuid.h">
       <Filter>src\FlexEngine</Filter>
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Core\components.h">
-      <Filter>src\FlexEngine\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="src\FlexEngine\Core\gameobject.h">
-      <Filter>src\FlexEngine\Core</Filter>
-    </ClInclude>
-    <ClInclude Include="src\FlexEngine\Core\scene.h">
       <Filter>src\FlexEngine\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Reflection\base.h">
@@ -188,21 +170,6 @@
     </ClInclude>
     <ClInclude Include="src\FlexEngine\datetime.h">
       <Filter>src\FlexEngine</Filter>
-    </ClInclude>
-    <ClInclude Include="src\FlexEngine\Math\vector2.h">
-      <Filter>src\FlexEngine\Math</Filter>
-    </ClInclude>
-    <ClInclude Include="src\FlexEngine\Math\vector3.h">
-      <Filter>src\FlexEngine\Math</Filter>
-    </ClInclude>
-    <ClInclude Include="src\FlexEngine\Math\vector4.h">
-      <Filter>src\FlexEngine\Math</Filter>
-    </ClInclude>
-    <ClInclude Include="src\FlexEngine\Math\values.h">
-      <Filter>src\FlexEngine\Math</Filter>
-    </ClInclude>
-    <ClInclude Include="src\FlexEngine\Math\flexmath.h">
-      <Filter>src\FlexEngine\Math</Filter>
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Core\imguiwrapper.h">
       <Filter>src\FlexEngine\Core</Filter>
@@ -218,6 +185,24 @@
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Core\layerstack.h">
       <Filter>src\FlexEngine\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\ECS\registry.h">
+      <Filter>src\FlexEngine\ECS</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\FlexMath\values.h">
+      <Filter>src\FlexEngine\FlexMath</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\FlexMath\vector2.h">
+      <Filter>src\FlexEngine\FlexMath</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\FlexMath\vector3.h">
+      <Filter>src\FlexEngine\FlexMath</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\FlexMath\vector4.h">
+      <Filter>src\FlexEngine\FlexMath</Filter>
+    </ClInclude>
+    <ClInclude Include="src\FlexEngine\ECS\transform.h">
+      <Filter>src\FlexEngine\ECS</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
