ecs system views, stringify update, tweaks and cleanup
- improved vector classes
- cleaned up reflection macros
- added reflection to vectors
- added stringify functions to many classes
- improved entity class
- added system views to ecs
- tweaked flexlogger

--- a/FlexEngine/FlexEngine.vcxproj.filters
+++ b/FlexEngine/FlexEngine.vcxproj.filters
@@ -100,7 +100,7 @@
     <ClCompile Include="src\FlexEngine\FlexMath\vector4.cpp">
       <Filter>src\FlexEngine\FlexMath</Filter>
     </ClCompile>
-    <ClCompile Include="src\FlexEngine\Component\transform.cpp">
+    <ClCompile Include="src\FlexEngine\Component\Transform2D.cpp">
       <Filter>src\FlexEngine\Component</Filter>
     </ClCompile>
     <ClCompile Include="src\FlexEngine\Core\ecs.cpp">
@@ -204,7 +204,7 @@
     <ClInclude Include="src\FlexEngine\FlexMath\vector4.h">
       <Filter>src\FlexEngine\FlexMath</Filter>
     </ClInclude>
-    <ClInclude Include="src\FlexEngine\Component\transform.h">
+    <ClInclude Include="src\FlexEngine\Component\Transform2D.h">
       <Filter>src\FlexEngine\Component</Filter>
     </ClInclude>
     <ClInclude Include="src\FlexEngine\Core\ecs.h">
