--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -166,7 +166,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\third_party\src\glad\glad.c" />
-    <ClCompile Include="src\FlexEngine\Component\transform.cpp" />
+    <ClCompile Include="src\FlexEngine\Component\Transform2D.cpp" />
     <ClCompile Include="src\FlexEngine\Core\ecs.cpp" />
     <ClCompile Include="src\FlexEngine\Core\entity.cpp" />
     <ClCompile Include="src\FlexEngine\Core\imguiwrapper.cpp" />
@@ -202,7 +202,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\FlexEngine\ansi_color.h" />
-    <ClInclude Include="src\FlexEngine\Component\transform.h" />
+    <ClInclude Include="src\FlexEngine\Component\Transform2D.h" />
     <ClInclude Include="src\FlexEngine\Core\components.h" />
     <ClInclude Include="src\FlexEngine\Core\ecs.h" />
     <ClInclude Include="src\FlexEngine\Core\entity.h" />
