ecs testing, bugfixes
- fixed bug with system view macros
- added entity test panel
- added properties panel
- renamed internal logger function

--- a/FlexEditor/imgui.ini
+++ b/FlexEditor/imgui.ini
@@ -173,20 +173,20 @@ Size=319,900
 Collapsed=0
 
 [Window][Down]
-Pos=314,548
-Size=654,172
+Pos=317,548
+Size=609,172
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Viewport]
-Pos=314,29
-Size=654,517
+Pos=317,29
+Size=609,517
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Content Browser]
 Pos=0,29
-Size=312,691
+Size=315,691
 Collapsed=0
 DockId=0x00000001,0
 
@@ -194,6 +194,23 @@ DockId=0x00000001,0
 ViewportPos=517,290
 ViewportId=0x972A4F5F
 Size=930,400
+Collapsed=0
+
+[Window][Properties]
+Pos=928,29
+Size=352,691
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Entity Testing]
+Pos=0,29
+Size=315,691
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Create Entity]
+Pos=596,306
+Size=305,221
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -328,15 +345,17 @@ Column 0  Weight=0.8451
 Column 1  Weight=1.1549
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
-  DockNode      ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,209 Size=1280,691 Split=X
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=968,691 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=312,691 Selected=0xBF096F38
-    DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=654,691 Split=Y
-      DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=654,174 CentralNode=1 Selected=0x13926F0B
-      DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=654,172 Selected=0x2DAC0363
-  DockNode      ID=0x00000008 Parent=0x8B93E3BD SizeRef=310,691 Selected=0xE87781F4
-DockSpace       ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
+DockSpace         ID=0x3BC79352 Pos=138,182 Size=1600,879 Split=Y
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=1025,606 CentralNode=1 Selected=0xE1FDE0B9
+  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=1025,271 Selected=0xDE6E0C33
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,209 Size=1280,691 Split=X
+  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=926,691 Split=X
+    DockNode      ID=0x00000006 Parent=0x00000003 SizeRef=968,691 Split=X
+      DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=315,691 Selected=0x53F85867
+      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=609,691 Split=Y
+        DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=654,174 CentralNode=1 Selected=0x13926F0B
+        DockNode  ID=0x0000000A Parent=0x00000002 SizeRef=654,172 Selected=0x2DAC0363
+    DockNode      ID=0x00000008 Parent=0x00000003 SizeRef=310,691 Selected=0xE87781F4
+  DockNode        ID=0x00000005 Parent=0x8B93E3BD SizeRef=352,691 Selected=0x199AB496
+DockSpace         ID=0xA086D808 Pos=81,177 Size=609,593 CentralNode=1 Selected=0x8815EFF6
 
